k3s/node-red/headers.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: node-red
spec:
  basicAuth:
    secret: auth-secret
