k3s/node-red/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-red-service
  namespace: node-red
  labels:
    app: node-red
spec:
  ports:
    - name: http
      port: 1880
      targetPort: 1880
  selector:
    app: node-red
  type: LoadBalancer
